# rat_memcache

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README_EN.md  README_JA.md  async_logging_test.toml  cache_config.toml  comprehensive_test.py  comprehensive_test_results.txt  debug_large_test.py  debug_test.py  disable_l2_config.toml  disable_logging_test.toml  logging_config_example.toml  logging_disabled_example.toml  melange_db_migration_plan.md  rat_memcached.toml  server_log.txt  simple_config.toml  test_cache.py  test_compression_thresholds.py  test_config.toml  test_large_value.py  test_report.md  test_response_format.rs  test_results.txt  test_simple_large_value.py  test_socket_buffer.py  test_timing.py  test_with_nc.sh
.claude/: settings.local.json
demo/: final_demo.py  streaming_protocol_demo.py
examples/: simple_cache_test.rs  test_cache_log_macro.rs  test_l1_no_compression.rs  test_library_logging.rs
src/: cache.rs  cache_melange.rs  compression.rs  config.rs  config.rs.backup  error.rs  l1_cache.rs  l2_cache.rs  l2_cache_melange.rs  lib.rs  logging.rs  logging.rs.bak  logging_new.rs  melange_adapter.rs  metrics.rs  streaming_protocol.rs  ttl.rs  types.rs
tests/: memcached_test.py  test_compression_architecture.rs  test_large_value.rs
