[package]
name = "rat_memcache"
version = "0.1.4"
edition = "2021"
authors = ["0ldm0s <oldmos@gmail.com>"]
description = "高性能双层缓存系统，基于内存缓存和 MelangeDB 持久化存储"
repository = "https://git.sukiyaki.su/0ldm0s/rat_memcache"
keywords = ["cache", "memcache", "melange_db", "performance", "rust"]
categories = ["caching", "database", "memory-management"]

[[bin]]
name = "rat_memcached"
path = "src/bin/rat_memcached.rs"

[[bin]]
name = "rat_memcached_melange"
path = "src/bin/rat_memcached_melange.rs"
required-features = ["melange-storage"]

[dependencies]

# 日志系统
zerg_creep = { path = "../zerg_creep" }

# 持久化存储（可选）
melange_db = { path = "../melange_db", optional = true }

# 压缩算法
lz4 = "1.24"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0"
tempfile = "3.8"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 并发数据结构
dashmap = "5.5"
parking_lot = "0.12"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 原子操作和同步
crossbeam = "0.8"

# 哈希算法
fxhash = "0.2"

# 字节操作
bytes = "1.5"

# 配置管理
toml = "0.8"

# 命令行参数解析
clap = "4.4"

# 系统信息获取
sysinfo = "0.30"

# Unix 系统调用
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows API
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Networking_WinSock"] }

[features]
default = ["lz4-compression", "ttl-support", "metrics", "melange-storage"]
lz4-compression = []
ttl-support = []
metrics = []
melange-storage = ["melange_db"]

# 压缩特性（互斥，用于 MelangeDB）
compression-none = ["melange_db/compression-none"]
compression-lz4 = ["melange_db/compression-lz4"]
compression-zstd = ["melange_db/compression-zstd"]

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.8"
